--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,8 +19,6 @@
 @import "landing";
 @import "materialize";
 
-
-
 body {
   font-family: 'Noto Sans', sans-serif;
   font-weight: 400;
@@ -204,4 +202,24 @@ select {
 
 main{
       padding-top: 18px !important;
+}
+
+////////////////////////////////
+/// MARGIN & PADDING Classes ///
+////////////////////////////////
+
+.margin-top-0 {
+  margin-top: 0;
+}
+
+.margin-top-xs {
+  margin-top: 5px;
+}
+
+.margin-top-sm {
+  margin-top: 10px;
+}
+
+.margin-top-m {
+  margin-top: 15px;
 }
