CSS: Renaming Classes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -59,9 +59,12 @@ h1 {
 }
 }
 
-.padding-bottom-100{
+.padding-bottom-100 {
   padding-bottom: 100px;
-  word-wrap: break-word;
+}
+
+.padding-bottom-40 {
+  padding-bottom: 40px;
 }
 
 .homepage-hero-module {
@@ -212,14 +215,14 @@ main{
   margin-top: 0;
 }
 
-.margin-top-xs {
+.margin-top-5 {
   margin-top: 5px;
 }
 
-.margin-top-sm {
+.margin-top-10 {
   margin-top: 10px;
 }
 
-.margin-top-m {
+.margin-top-15 {
   margin-top: 15px;
 }
