--- a/app/views/searches/index.html.erb
+++ b/app/views/searches/index.html.erb
@@ -48,7 +48,7 @@
             ),
             include_blank: true %>
 
-      <%= f.submit 'Search', class: "waves-effect waves-light btn margin-top-m" %>
+      <%= f.submit 'Search', class: "waves-effect waves-light btn margin-top-15" %>
     <% end %>
   </div>
 </div>
