--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -66,7 +66,7 @@
           <br/>
         </div>
         <div class="center">
-          <%= link_to "Cancel Order", order_path(id: o.id), method: :delete, class: "btn btn-primary"%>
+          <%= link_to "Cancel Order", order_path(id: o.id), method: :delete, class: "btn margin-top-15"%>
         </div>
       </div>
     </div>
