--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,32 +1,32 @@
 <div class="profile-banner">
-<div class="row">
-  <div class="col s6 m6">
-    <%= user_avatar(class: 'fa-4x avatar-profile') %>
-    <br/>
-    <br/>
-    Items <%= current_user.first_name %> liked.
-  </div>
-  <div class="col s6 m6 center">
-    <strong>
-      <h5><%= current_user.user_name %></h5>
-      <%= link_to "Orders", orders_path, method: :get %>
-      <h6>
-        <span class='user-like-count'>
-          <%= current_user.liked_items.count %>
-        </span>
-        <% if current_user.liked_items.count == 1 %>
-        <br/>like
-        <% else %>
-        <br/>likes
-        <% end %>
-      </h6>
-    </strong>
-  </div>
+  <div class="row">
+    <div class="col s6 m6">
+      <%= user_avatar(class: 'fa-4x avatar-profile') %>
+      <br/>
+      <br/>
+      Items <%= current_user.first_name %> liked.
+    </div>
+    <div class="col s6 m6 center">
+      <strong>
+        <h5><%= current_user.user_name %></h5>
+        <%= link_to "Orders", orders_path, method: :get %>
+        <h6>
+          <span class='user-like-count'>
+            <%= current_user.liked_items.count %>
+          </span>
+          <% if current_user.liked_items.count == 1 %>
+            <br/>like
+          <% else %>
+            <br/>likes
+          <% end %>
+        </h6>
+      </strong>
+    </div>
   </div>
 </div>
 
 <div class="row">
- <% current_user.liked_items.each do |c| %>
+  <% current_user.liked_items.each do |c| %>
     <div class="col s6 m6 l3">
       <div class="card" data-item="<%= c.id %>">
         <a class="modal-trigger  waves-light " href="#modal<%= c.id %>">
@@ -36,8 +36,8 @@
         </a>
 
         <div class="card-content">
-        <div class= "center">
-          <div class="card-title"><%= c.name %></div>
+          <div class= "center">
+            <div class="card-title"><%= c.name %></div>
             <% item_like = current_user.item_likes.find{ |item_like| item_like if item_like.item_id == c.id } %>
             <p>Price: $<%= c.price %></p>
             <span class="like-count"><%= c.item_likes.count %></span> likes
@@ -56,14 +56,13 @@
           <div class="unlike-btn">
             <% unless item_like.nil? %>
               <%= link_to 'unlike', item_item_like_path(c.id, item_like), method: :delete, remote: true %><br/>
-              <% end %>
+            <% end %>
           </div>
         </div>
       </div>
     </div>
   <% end %>
 </div>
-
 
 <!-- Modal Structure -->
 <% current_user.liked_items.each do |c| %>
@@ -96,7 +95,7 @@
           </div>
           <div class="center">
             <%= link_to new_order_path(item_id: c.id), method: :get do %>
-              <div class="btn btn-primary center">Order</div>
+              <div class="btn center margin-top-15">Order</div>
             <% end %>
         </div>
       </div>
