--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -83,7 +83,10 @@
 
 <div id="modal1" class="modal">
   <div class="modal-content">
-    <h4>Edit your Sizes</h4>
+    <a href="#!" class="modal-action modal-close btn-flat pull-right">&times</a>
+    <div class="center-align">
+      <h5>Edit your Sizes</h5>
+    </div>
 
     <%= simple_form_for(resource,
           as: resource_name,
@@ -92,26 +95,19 @@
       <%= f.error_notification %>
 
       <div class="form-inputs">
-        <h5>Top size</h5>
         <%= f.input :top_size, required: true, :collection => %w[XS S M L XL], include_blank: "Enter your Top-size to optimise the cards" %>
 
-        <h5>Jacket size</h5>
         <%= f.input :jacket_size, required: true, :collection => %w[XS S M L XL], include_blank: "Enter your Jacket-size to optimise the cards" %>
 
-        <h5>Underwear size</h5>
         <%= f.input :underwear_size, required: true, :collection => %w[XS S M L XL], include_blank: "Enter your Undies-size to optimise the cards" %>
 
-        <h5>Accessory size</h5>
         <%= f.input :accessoire_size, required: true, :collection => %w[XS S M L XL], include_blank: "Enter your Accessory-size to optimise the cards" %>
 
-        <h5>Jewlery size</h5>
         <%= f.input :jewelry_size, required: true, :collection => %w[XS S M L XL], include_blank: "Enter your Jewlery-size to optimise the cards" %>
 
-        <h5>Swimsuit size</h5>
         <%= f.input :swimsuit_size, required: true, :collection => %w[XS S M L XL], include_blank: "Enter your Swimsuit-size to optimise the cards" %>
 
         <% if current_user.female? %>
-          <h5>Dress size</h5>
           <output name="dressOutputName" id="userdressOutput">
             <%=current_user.dress_size%>
           </output>
@@ -120,7 +116,6 @@
           </p>
         <% end %>
 
-        <h5>Bottom size</h5>
         <output name="bottomOutputName" id="userbottomOutput">
           <%=current_user.bottom_size%>
         </output>
@@ -128,7 +123,6 @@
           <%= f.input_field :bottom_size, type: "range", id: "user_bottom_size", min:30, max:50, oninput: "userbottomOutput.value = user_bottom_size.value" %>
         </p>
 
-        <h5>Shoe size</h5>
         <output name="shoeOutputName" id="usershoeOutput">
           <%=current_user.shoe_size%>
         </output>
@@ -136,12 +130,11 @@
           <%= f.input_field :shoe_size, type: "range", id: "user_shoe_size", min:32, max:50, oninput: "usershoeOutput.value = user_shoe_size.value" %>
         </p>
 
-        <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
-        <br/>
+        <%= f.input :current_password, hint: "Please input your password to confirm changes.", required: true %>
+      </div>
 
-        <div class="form-actions">
-          <%= f.button :submit, "Update" %>
-        </div>
+      <div class="form-actions">
+        <%= f.button :submit, "Update" %>
       </div>
     </div>
   <% end %>
