--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -58,7 +58,7 @@
 
     <div class="row">
       <div class="col s12 m12">
-        <div class="card grey lighten-2">
+        <div class="card blue-grey lighten-5">
           <div class="card-content white-text">
             <span class="card-title">Unhappy?</span>
           </div>
