User#Edit: Form Input Text Color Black + Labels Sliders

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,6 +63,10 @@ h1 {
   color: black;
 }
 
+.form-control {
+  color: black !important;
+}
+
 .homepage-hero-module {
     border-right: none;
     border-left: none;
