--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -1,5 +1,4 @@
-<%= render 'layouts/cover_video' %>
-
+<div class="landing">
 <div class="landing-container valign-wrapper">
   <div class="valign center-align">
     <div>
@@ -11,9 +10,4 @@
     </div>
   </div>
 </div>
-
-<script>
-  $(document).ready(function() {
-    $(".letter-container").lettering();
-  });
-</script>
+</div>
