--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -35,7 +35,7 @@
 
 <!-- Modal Structure -->
 <% @orders.each do |o| %>
-  <div id="modal<%= o.id %>" class="modal item-modal" data-item="<%= o.id %>">
+  <div id="modal<%= o.id %>" class="modal profil item item-modal" data-item="<%= o.id %>">
     <div class="modal-content">
       <div class="center">
         <div class="pull-right">
