Add rangesliders for min and max price on searches form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 @import "card";
 @import "materialize";
 @import "landing";
+@import "nouislider";
 
 body {
   font-family: 'Noto Sans', sans-serif;
