--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -12,5 +12,20 @@
 
 .card .card-content .card-title {
   line-height: 30px !important;
-  min-height:100px !important
+  min-height:100px !important;
+  max-height: 534px !important;
+
+}
+
+.card-image {
+      height: 355px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.card-content {
+  position:relative;
+   top:-30px;
+   z-index: 5;
 }
