--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -5,25 +5,25 @@
       <div class="row center-align footer-icon">
         <%= link_to searches_path do %>
           <div class="col s3">
-            <i class="glyphicon social-icon glyphicon-search"></i>
+            <i class="glyphicon social-icon glyphicon-search" style="color:#EAE7D5"></i>
           </div>
         <% end %>
 
         <%= link_to home_path do %>
           <div class="col s3">
-            <i class="glyphicon social-icon glyphicon-home"></i>
+            <i class="glyphicon social-icon glyphicon-home" style="color:#EAE7D5"></i>
           </div>
         <% end %>
 
         <%= link_to user_path(current_user) do %>
           <div class="col s3">
-            <i class="glyphicon social-icon glyphicon-user"></i>
+            <i class="glyphicon social-icon glyphicon-user" style="color:#EAE7D5"></i>
           </div>
         <% end %>
 
         <%= link_to edit_user_registration_path do %>
           <div class="col s3">
-            <i class="glyphicon social-icon glyphicon-cog"></i>
+            <i class="glyphicon social-icon glyphicon-cog" style="color:#EAE7D5"></i>
           </div>
         <% end %>
       </div>
