--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -13,7 +13,7 @@
 	      <%= link_to 'Sign Up', new_user_registration_path, class: "btn devise-btn" %>
 	    </div>
 	    <div>
-	      <%= link_to "Sign Up with Facebook", user_facebook_omniauth_authorize_path, class: "btn devise-btn" %>
+	      <%= link_to "Sign Up with Facebook", user_facebook_omniauth_authorize_path, class: "btn blue darken-4 devise-btn" %>
 	    </div>
 	  </div>
 	</div>
