--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -24,8 +24,8 @@
     background-position: center;
 }
 
-.card-content {
-  position:relative;
-   top:-30px;
-   z-index: 5;
-}
+// .card-content {
+//   position:relative;
+//    top:-30px;
+//    z-index: 5;
+// }
