--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -4,7 +4,9 @@
 	  	<div class="row">
 		  	<div class="col s10 offset-s1">
 	  			<div class="card-panel teal card-landing">
-	  					Welcome to Fiber! We are committed to finding you the newest styles from all the best brands in your area. Sign up for free and find your next outfit now!
+	  					<h5>Welcome to Fiber!</h5>
+	  					<p>We are committed to finding you the <strong>newest styles</strong> from all the <strong>best brands</strong> in your area.</p>
+	  					<p>Sign up for free &<br> find your next outfit now!</p>
 	  			</div>
 	  		</div>
 	  	</div>
