--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -134,7 +134,7 @@ textarea.materialize-textarea {
 
 select {
   display: inline-block !important;
-}
+}application
 
 .item-modal {
   top: 5% !important;
@@ -253,4 +253,10 @@ main{
 
 .padding-bottom-100 {
   padding-bottom: 100px;
+}
+
+
+h1,h2,h3,h4,h5{
+  font-family: 'Kreon', serif;
+
 }
